<resources>
    <string name="app_name">Recipe App</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_recipe_create">Create recipe</string>
    <string name="title_add_ingredient_measurement_recipes">Create ingredient measurement</string>
    <string name="title_user">User</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_signup">Signup</string>
    <string name="title_login">Login</string>
    <string name="title_ingredient">Ingredient</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_pantry_ingredient">Pantry Ingredient</string>
    <string name="title_add_to_pantry">Add Ingredient to Pantry</string>
    <string name="title_new_ingredient">New ingredient</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_new_recipe_list">New recipe list</string>
    <string name="title_change_password">Change password</string>
    <string name="title_edit_recipe">Edit recipe</string>
    <string name="title_recipe_list">Recipe list</string>
    <string name="title_camera">Camera</string>
    <string name="title_rename_recipe_list">Change recipe list name</string>
    <string name="title_filter_tpc">Filter by TPC</string>
    <string name="title_filter_tic">Filter by TIC</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="title_hint">Title of recipe</string>
    <string name="instructions_hint">Instructions</string>
    <string name="new_ingredient_title_hint">Title</string>
    <string name="quantity_hint">Quantity</string>
    <string name="new_ingredient_price_hint">Price</string>
    <string name="new_ingredient_store_hint">Store</string>
    <string name="new_ingredient_brand_hint">Brand</string>
    <string name="new_password_hint">New password</string>
    <string name="validate_new_password_hint">Retype password</string>
    <string name="recipe_search_bar_hint">Search for recipe</string>
    <string name="unit_dropdown_hint">Unit</string>
    <string name="ingredient_dropdown_hint">Ingredient</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="instructions_text">Instructions</string>
    <string name="name_text">Name</string>
    <string name="value_text">Value</string>
    <string name="add_to_pantry">Add to pantry</string>
    <string name="remove_from_pantry">Remove</string>
    <string name="privacy_selection_label">Make private</string>
    <string name="confirm_new_ingredient_button">Create ingredient</string>
    <string name="check_password_button">Check if password is valid</string>
    <string name="recipe_instructions">Instructions</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_list_description">Description</string>
    <string name="recipe_list_recipes">Recipes</string>
    <string name="recipe_list_text">Recipe Lists</string>
    <string name="create_new_recipe_list_button">New Recipe List</string>
    <string name="new_recipe_list_title_hint">Title</string>
    <string name="new_recipe_list_description_hint">Description</string>
    <string name="login_button_text">Log in</string>
    <string name="signup_button_text">Sign up</string>
    <string name="logout_button_text">Log out</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="create_button_text">Create</string>
    <string name="add_button_text">Add</string>
    <string name="delete_button_text">Delete</string>
    <string name="rename_button_text">Rename</string>
    <string name="create_new_ingredient_button">New ingredient</string>
    <string name="confirm_button">Confirm</string>
    <string name="confirm_create_recipe_list_button">Create recipe list</string>
    <string name="add_to_list_button">Add to list</string>
    <string name="filter_tpc_button">Filter by TPC</string>
    <string name="filter_tic_button">Filter by TIC</string>
    <string name="confirm_filter_button">Confirm</string>
    <string name="clear_filter_button">Clear filter</string>
    <string name="save_button">Save</string>
    <string name="remove_button">Remove</string>
    <string name="edit_button_text">Edit</string>
    <string name="rename_ingredient_button_text">Rename</string>
    <string name="look_at_recipe_button">View recipe</string>
    <string name="change_password_button">Change password</string>
    <string name="camera_shutter_button">Take Photo</string>
    <string name="home_camera_button_text">Camera</string>
    <string name="home_information_text">Come cook with us!</string>
    <string name="sort_by_price_button">Sort by price</string>
    <string name="sort_by_title_button">Sort by title</string>
    <string name="recipe_tpc">Total purchase cost: %1$,d &curr;</string>
    <string name="recipe_tic">Total ingredient cost: %1$,.0f &curr;</string>
    <string name="recipe_ppc">Personalized purchase cost: %1$,.0f &curr;</string>
    <string name="ingredient_price">%1$,.0f &curr;</string>
    <string name="ingredient_price_store">%1$,.0f &curr; at %2$s</string>
    <string name="quantity_brand">%1$s %2$s, %3$s brand</string>
    <string name="quantity">%1$s %2$s</string>
    <string name="ingredient_quantity_brand">%1$s %2$s, %3$s brand</string>
    <string name="pantry_ingredient_quantity_brand">%1$s %2$s, %3$s brand</string>
    <string name="private_text">private</string>
    <string name="public_text">public</string>
    <string name="login_failed_toast">Login failed. Please ensure username and password are correct.</string>
    <string name="login_not_empty_toast">Username and password cannot be empty</string>
    <string name="signup_failed_toast">Signup failed. I won\'t tell you why..</string>
    <string name="null_ingredient_list">Something went wrong displaying the ingredient list.</string>
    <string name="get_recipes_failed_toast">Failed to get all recipes</string>
    <string name="delete_ingredient_failed">Something went wrong when trying to delete the ingredient.</string>
    <string name="delete_ingredient_success">Ingredient deleted successfully.</string>
    <string name="delete_recipe_failed">Something went wrong when trying to delete the Recipe.</string>
    <string name="delete_recipe_success">Recipe deleted successfully.</string>
    <string name="null_pantry_list">Something went wrong displaying the pantry</string>
    <string name="pantry_no_user">You must log in to view your pantry</string>
    <string name="remove_from_pantry_failed">Failed to remove item from pantry.</string>
    <string name="remove_from_pantry_successful">Successfully removed item from pantry.</string>
    <string name="field_required_error">This field is required</string>
    <string name="add_to_pantry_failed">Failed to add ingredient to pantry</string>
    <string name="add_to_pantry_success">Ingredient successfully added to pantry</string>
    <string name="add_to_pantry_already_existing">The ingredient has not been added since it\'s already in the pantry.</string>
    <string name="create_ingredient_failed_toast">Failed to create ingredient.</string>
    <string name="rename_ingredient_failed_toast">Failed to rename ingredient.</string>
    <string name="create_recipe_success_toast">The recipe has been created</string>
    <string name="create_recipe_failed_toast">Failed to create recipe</string>
    <string name="create_recipe_ingredients_failed_toast">Failed to add ingredients to recipe</string>
    <string name="recipe_unknown_error">Recipe could not be crated, unknown error</string>
    <string name="recipe_edit_unknown_error">Recipe could not be edited, unknown error</string>
    <string name="recipe_name_is_empty_error">Recipe Must have a name</string>
    <string name="create_recipe_list_failed_toast">Failed to create recipe list.</string>
    <string name="create_recipe_list_success_toast">Successfully created recipe list.</string>
    <string name="recipe_removed_from_list_success_toast"> Recipe was successfully removed from the list</string>
    <string name="recipe_removed_from_list_failed_toast">Recipe was not removed from the list</string>
    <string name="null_recipe_lists">Something went wrong displaying the recipe lists</string>
    <string name="add_recipe_to_list_failed_toast">Failed to add recipe to list.</string>
    <string name="add_recipe_to_list_success_toast">The recipe has been added to the list</string>
    <string name="add_recipe_to_list_existing_toast">The recipe was already on this list, and still is.</string>
    <string name="get_recipe_lists_failed_toast">Something went wrong fetching the lists.</string>
    <string name="password_invalid_toast">Invalid password</string>
    <string name="password_has_no_input_toast">The password field can not be empty</string>
    <string name="get_recipe_list_failed_toast">Something went wrong fetching the list.</string>
    <string name="recipe_list_rename_blank">Input cannot be blank</string>
    <string name="recipe_list_rename_not_authorized">You must be the creator of this list to change the title</string>
    <string name="invalid_price_input_toast">Input is invalid</string>
    <string name="delete_user_failed_toast">Failed to delete the user account.</string>
    <string name="delete_user_success_toast">User account deleted successfully.</string>
    <string name="home_photo_description">A photo stored on the device</string>
    <string name="camera_photo_success_toast">Photo captured successfully!</string>
    <string name="camera_photo_failure_toast">Photo captured failed</string>
    <string name="camera_no_access_toast">Unable to take photo. Please make sure to allow access to the camera.</string>
    <string name="camera_not_initialized_toast">Please wait for the camera to start before taking photos.</string>
    <string name="new_password_invalid_error">The passwords must be the same</string>
    <string name="new_password_empty_error">The password field can not be empty</string>
    <string name="password_change_success_toast">Your password has been change</string>
    <string name="password_change_fail_toast">Your password was not change</string>
    <string name="password_change_error_toast">Your password could not change</string>
    <string name="recipe_missing_toast">Recipe is missing</string>
    <string name="delete_list_failed_toast">Something went wrong when trying to delete the recipe list.</string>
    <string name="delete_list_success_toast">Recipe list deleted successfully.</string>
    <string name="remove_ingredient_from_recipe_tooltip">To remove an ingredient from the recipe, first click on the ingredient, then click remove</string>
    <string name="rename_list_failed_toast">Something went wrong when renaming the list.</string>
    <string name="missing_information_toast">Some information is missing</string>
    <string name="open_recipe_failed_toast">"Unable to open the recipe, please try again later"</string>
    <string name="viewing_deleted_recipe_toast">The recipe you were viewing has been deleted</string>
    <string name="open_ingredient_failed_toast">"Unable to open the ingredient, please try again later"</string>
    <string name="viewing_deleted_ingredient_toast">The ingredient you were viewing has been deleted</string>
    <string name="home_photo_unavailable_toast">An error occurred while trying to fetch the image</string>
    <string name="selected_ingredient">Ingredient</string>
    <string name="selected_pantry_item">Pantry Item</string>
    <string name="selected_recipe_list">Recipe List</string>
    <string name="selected_recipe">Recipe</string>
    <string name="selected_unit">Unit</string>
    <string name="selected_ingredient_measurement">Ingredient measurement</string>
    <string name="selected_user_id">User id</string>
    <string name="selected_user_name">User name</string>
</resources>