<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_recipes"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/nav_ingredients"
        android:icon="@drawable/ic_ingredients_black_24dp"
        android:title="@string/title_ingredients" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_user" />

    <item
        android:id="@+id/nav_pantry"
        android:icon="@drawable/ic_pantry_black_24dp"
        android:title="@string/title_pantry" />

</menu>