<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <!--
    <fragment // tegund hlutarins
        android:id="@+id/navigation_home" //"handle" til að navigate-a á þetta fragment
        android:name="hbv601g.recipeapp.ui.home.HomeFragment" // path á java skrá fyrir fragmentið
        android:label="@string/title_home" // titllinn sem kemur efst á skjánum
        tools:layout="@layout/fragment_home" /> //slóð á xml skrá fyrir þetta fragment
    -->

    <fragment
        android:id="@+id/navigation_home"
        android:name="hbv601g.recipeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_recipes"
        android:name="hbv601g.recipeapp.ui.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes"/>

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="hbv601g.recipeapp.ui.ingredients.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="hbv601g.recipeapp.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user"/>


    <!-- fragments  -->
    <fragment
        android:id="@+id/navigation_user_no_user"
        android:name="hbv601g.recipeapp.ui.user.UserNoUserFragment"
        android:label="No user"
        tools:layout="@layout/fragment_user_no_user"/>

    <fragment
        android:id="@+id/navigation_signup"
        android:name="hbv601g.recipeapp.ui.login.SignupFragment"
        tools:layout="@layout/fragment_signup" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="hbv601g.recipeapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login"/>
    <fragment
        android:id="@+id/navigation_pantry"
        android:name="hbv601g.recipeapp.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_ingredient"
        android:name="hbv601g.recipeapp.ui.ingredients.IngredientFragment"
        android:label="@string/title_ingredient"
        tools:layout="@layout/fragment_ingredient">
        <argument
            android:name="@string/selected_ingredient"
            app:argType="hbv601g.recipeapp.entities.Ingredient" />
    </fragment>
    <fragment
        android:id="@+id/navigation_pantry_ingredient"
        android:name="hbv601g.recipeapp.ui.pantry.PantryIngredientFragment"
        android:label="@string/title_pantry_ingredient"
        tools:layout="@layout/fragment_pantry_ingredient" />
    <fragment
        android:id="@+id/navigation_add_to_pantry"
        android:name="hbv601g.recipeapp.ui.pantry.AddToPantryFragment"
        android:label="@string/add_to_pantry"
        tools:layout="@layout/fragment_add_to_pantry" />

</navigation>