<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.recipes.NewRecipeFragment"
        >

        <TextView
            android:id="@+id/textview_title_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/instructions_text"
            app:layout_constraintBottom_toTopOf="@+id/instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_name" />

        <TextView
            android:id="@+id/textview_title_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginBottom="18dp"
            android:scaleX="1.5"
            android:scaleY="1.5
"
            android:text="@string/ingredients_text"
            app:layout_constraintBottom_toTopOf="@+id/ingredients"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textview_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="49dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:text="@string/name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/recipe_name"
            android:layout_width="278dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="11dp"
            android:ems="10"
            android:hint="@string/recipe_hint"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_title_name" />

        <EditText
            android:id="@+id/instructions"
            android:layout_width="310dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="11dp"
            android:hint="@string/instructions_hint"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/add_ingredient"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:clickable="true"
            android:contentDescription="@string/title_add_ingredient_measurement_recipes"
            android:scaleX="1"
            android:scaleY="1"
            app:layout_constraintBottom_toTopOf="@+id/ingredients"
            app:layout_constraintStart_toEndOf="@+id/textview_title_ingredients"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Switch
            android:id="@+id/is_private"
            android:layout_width="128dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            android:text="Private?"
            app:layout_constraintBottom_toTopOf="@+id/create_recipe"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/create_recipe"
            android:layout_width="123dp"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="41dp"
            android:text="@string/create_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_recipe"
            android:layout_width="123dp"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="41dp"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_recipe" />

        <ListView
            android:id="@+id/ingredients"
            android:layout_width="294dp"
            android:layout_height="251dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/is_private"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
