<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipe_list_title_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/new_recipe_list_title_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_list_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:hint="@string/new_recipe_list_description_hint">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_recipe_list_description_input"
                android:layout_width="match_parent"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLength="250"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/new_recipe_list_private_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_selection_label"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_create_recipe_list_button"/>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>